test/asm/charsize.err
error: charsize.asm(17):
    CHARSIZE: No character mapping for ""
error: charsize.asm(18):
    CHARSIZE: No character mapping for "hello world"
error: charsize.asm(19):
    CHARSIZE: No character mapping for "abcdef"
error: charsize.asm(20):
    CHARSIZE: No character mapping for "é"
Assembly aborted with 4 errors!
